config-root/namespaces/jx/jxboot-helmfile-resources/700-chartmuseum-ing.yaml
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: chartmuseum
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jenkins-x-chartmuseum
          servicePort: 8080
    host: chartmuseum-jx.34.71.30.8.nip.io
