config-root/namespaces/jx/jxboot-helmfile-resources/700-nexus-ing.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nexus
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
    host: nexus-jx.34.71.30.8.nip.io
